--- a/templates/bookstore/book-detail.html
+++ b/templates/bookstore/book-detail.html
@@ -113,70 +113,40 @@
 
     <main>
         <div class="container obs-container">
-            <h2>Featured Books</h2>
-            <div class="row">
-                <div class="col-md-4 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-4 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-4 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-            </div>
-            <h2>New Arrivals</h2>
+            <h2>Book Details</h2>
+            <hr>
             <div class="row">
                 <div class="col-md-3 obs-book-display">
                     <img src="https://dummyimage.com/730x1040/eee/aaa" />
                 </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-            </div>
-            <h2>Popular Reads</h2>
-            <div class="row">
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
+                <div class="col-md-9">
+                    <h2>Book Title</h2>
+                    <span class="fa fa-star obs-checked"></span>
+                    <span class="fa fa-star obs-checked"></span>
+                    <span class="fa fa-star obs-checked"></span>
+                    <span class="fa fa-star obs-checked"></span>
+                    <span class="fa fa-star"></span>
+                    <br>
+                    <strong>Description:</strong>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Viverra accumsan in nisl nisi scelerisque eu ultrices vitae
+                        auctor. Quam viverra orci sagittis eu. Sit amet dictum sit amet justo. Donec pretium vulputate
+                        sapien nec sagittis aliquam. Rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt
+                        lobortis feugiat. Aliquam purus sit amet luctus venenatis. Lacus luctus accumsan tortor posuere.
+                        Faucibus a pellentesque sit amet porttitor eget. Vel turpis nunc eget lorem dolor sed viverra.
+                        Massa id neque aliquam vestibulum morbi blandit cursus risus at. Eget nulla facilisi etiam
+                        dignissim diam quis. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Mattis enim
+                        ut tellus elementum sagittis. Nisi quis eleifend quam adipiscing vitae proin sagittis nisl
+                        rhoncus.</p>
+
+                    <form class="form-inline">
+                        <div class="form-group mb-2">
+                            <input type="number" class="form-control" id="bookquantity" name="bookquantity" min="1"
+                                value="1">
+                        </div>
+                        <button type="submit" class="btn obs-button-primary mb-2 mx-sm-3">Add to Cart</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -203,7 +173,8 @@
                     <div class="col-md-4">
                         <h4>Contact</h4>
                         <ul>
-                            <li><i class="fas fa-map-marker-alt"></i> <a href="#">200 D. W. Brooks Drive, Athens, GA 30602</a></li>
+                            <li><i class="fas fa-map-marker-alt"></i> <a href="#">200 D. W. Brooks Drive, Athens, GA
+                                    30602</a></li>
                             <li><i class="fas fa-envelope"></i> <a href="#">obs.uga@gmail.com</a></li>
                             <li><i class="fas fa-phone-alt"></i> <a href="#">(706) 542-2594</a></li>
                         </ul>
