--- a/templates/bookstore/registration-confirmation.html
+++ b/templates/bookstore/registration-confirmation.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
     <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 
-    <title>Online Bookstore System | OBS</title>
+    <title>Registration Confirmation - Online Bookstore System | OBS</title>
 </head>
 
 <body>
@@ -113,72 +113,11 @@
 
     <main>
         <div class="container obs-container">
-            <h2>Featured Books</h2>
-            <div class="row">
-                <div class="col-md-4 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-4 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-4 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-            </div>
-            <h2>New Arrivals</h2>
-            <div class="row">
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-            </div>
-            <h2>Popular Reads</h2>
-            <div class="row">
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-                <div class="col-md-3 obs-book-display">
-                    <img src="https://dummyimage.com/730x1040/eee/aaa" />
-                </div>
-            </div>
+            <h2>Registration Confirmation</h2>
+            <hr>
+            <div style="font-size: 100px;line-height: 0;text-align: center;width: 100%;"><i
+                    class="far fa-check-circle"></i></div>
+            <p style="width: 100%; text-align: center; font-size: 20pt;">Registration success! Please check your email for activation link.</p>
         </div>
     </main>
 
@@ -203,7 +142,8 @@
                     <div class="col-md-4">
                         <h4>Contact</h4>
                         <ul>
-                            <li><i class="fas fa-map-marker-alt"></i> <a href="#">200 D. W. Brooks Drive, Athens, GA 30602</a></li>
+                            <li><i class="fas fa-map-marker-alt"></i> <a href="#">200 D. W. Brooks Drive, Athens, GA
+                                    30602</a></li>
                             <li><i class="fas fa-envelope"></i> <a href="#">obs.uga@gmail.com</a></li>
                             <li><i class="fas fa-phone-alt"></i> <a href="#">(706) 542-2594</a></li>
                         </ul>
